--- a/src/html/base/header.html
+++ b/src/html/base/header.html
@@ -12,14 +12,14 @@
             <div class="header__phone">
                 <div class="phone-trigger"><svg><use href="@img/icons/icons.svg#phone"></use></svg>Контакти</div>
                 <ul class="phone-dropdown">
-                    <li><a href="tel:+">+55 555 5555 55</a></li>
-                    <li><a href="tel:+">Whatsapp</a></li>
-                    <li><a href="tel:+">Telegram</a></li>
-                    <li><a href="tel:+">Viber</a></li>
+                    <li><a href="tel:+"><img src="@img/phone.png" alt="">+55 555 5555 55</a></li>
+                    <li><a href="tel:+"><img src="@img/wt.png" alt="">Whatsapp</a></li>
+                    <li><a href="tel:+"><img src="@img/tg.png" alt="">Telegram</a></li>
+                    <li><a href="tel:+"><img src="@img/vr.png" alt="">Viber</a></li>
                 </ul>
             </div>
             <div class="header__buttons">
-                <a href="#" class="btn"><span>Увійти</span></a>
+                <a data-fancybox="" data-src="#login-user" href="javascript:;" class="btn"><span>Увійти</span></a>
                 <a href="#" class="btn btn--bgfull"><span>Зареєструватись</span></a>
             </div>
             <div class="header__collapse"><span></span></div>
