--- a/src/html/pages/home/block-reviews.html
+++ b/src/html/pages/home/block-reviews.html
@@ -93,7 +93,11 @@
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
             </div>
-            <a href="#" class="block-reviews__link btn btn--bgfull">Спробувати безкоштовно</a>
+
+            <div class="block-reviews-btn">
+                <a href="#" class="block-reviews__link btn btn--bgfull">Спробувати безкоштовно</a>
+                <a href="javascript:;" data-fancybox="" data-src="#reviews-form" class="btn">Залишити відгук</a>
+            </div>
         </div>
     </div>
 </section>
